--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
+    "gulp-changed": "^4.0.3",
     "gulp-clean-css": "^4.3.0",
+    "gulp-imagemin": "^8.0.0",
     "gulp-rename": "^2.0.0"
   },
   "scripts": {
